# perspective

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
.hermes/plans/: 2026-06-07_perspective-implementation.md  2026-06-09_140000-match-reality-with-docs.md
crates/perspective-cli/: Cargo.toml
crates/perspective-cli/src/: main.rs
crates/perspective-core/: Cargo.toml
crates/perspective-core/dashboard_dist/: index.html
crates/perspective-core/dashboard_dist/assets/: index-ChkuqHiX.css  index-CvB0_ERN.js
crates/perspective-core/src/: config.rs  engine.rs  error.rs  lib.rs  llm.rs  monitor.rs  server.rs  static_files.rs
crates/perspective-core/src/consolidation/: communities.rs  dedup.rs  mod.rs  promotion.rs  scheduler.rs
crates/perspective-core/src/decay/: ebbinghaus.rs  maintenance.rs  mod.rs
crates/perspective-core/src/embedding/: local.rs  mod.rs
crates/perspective-core/src/extraction/: batcher.rs  entities.rs  mod.rs  pipeline.rs  relations.rs
crates/perspective-core/src/retrieval/: entity_search.rs  fusion.rs  graph_search.rs  mod.rs  scorer.rs  vector_search.rs
crates/perspective-core/src/store/: graph.rs  mod.rs  text.rs  vector.rs
crates/perspective-core/src/types/: graph.rs  memory.rs  mod.rs
crates/perspective-core/tests/: extraction_integration.rs
crates/perspective-plugin/: Cargo.toml  plugin.yaml
crates/perspective-plugin/src/: config.rs  lib.rs  provider.rs
crates/perspective-python/: Cargo.toml  pyproject.toml
crates/perspective-python/perspective_python/: __init__.py
crates/perspective-python/perspective_python/dashboard_dist/: index.html
crates/perspective-python/src/: lib.rs
crates/perspective-server/: Cargo.toml
crates/perspective-server/src/: dashboard.rs  main.rs  static_files.rs
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  Layout.tsx  api.ts  hooks.ts
dashboard/src/layouts/: Dashboard.astro
dashboard/src/pages/: Config.tsx  Graph.tsx  Logs.tsx  Memories.tsx  Overview.tsx  Processes.tsx  Settings.tsx  config.astro  graph.astro  index.astro  memories.astro  processes.astro
dashboard/src/styles/: global.css
models/: NuExtract-tiny-v1.5-Q5_K_M.gguf  Ternary-Bonsai-1.7B-Q2_0.gguf
perspective-data/tantivy/: meta.json
plugins/memory/perspective/: __init__.py
plugins/memory/perspective/dashboard_dist/assets/: index-B4grvo9i.css  index-mfPPpBZ2.js
scripts/: build-dashboard.sh  dashboard.py  dashboard_server.py  migrate_hindsight.py
