[package]
name = "perspective-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "perspective"
path = "src/main.rs"

[dependencies]
perspective-core = { path = "../perspective-core" }
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
