[package]
name = "perspective-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "perspective_python"
crate-type = ["cdylib"]

[dependencies]
perspective-core = { path = "../perspective-core" }
tokio.workspace = true
serde_json.workspace = true
uuid.workspace = true
pyo3 = { version = "0.23", features = ["extension-module"] }
